Lab/Lab4/Code/syntax.output
语法

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec SEMI
    8       | Specifier ExtDecList error
    9       | Specifier error
   10       | Specifier error SEMI

   11 ExtDecList: VarDec
   12           | VarDec COMMA ExtDecList

   13 Specifier: TYPE
   14          | StructSpecifier

   15 StructSpecifier: STRUCT OptTag LC DefList RC
   16                | STRUCT Tag

   17 OptTag: ID
   18       | %empty

   19 Tag: ID

   20 VarDec: ID
   21       | VarDec LB INT RB
   22       | VarDec LB INT error
   23       | VarDec LB error RB

   24 FunDec: ID LP VarList RP
   25       | ID LP RP
   26       | ID LP VarList error
   27       | ID LP error RP

   28 VarList: ParamDec COMMA VarList
   29        | ParamDec

   30 ParamDec: Specifier VarDec

   31 CompSt: LC DefList StmtList RC

   32 StmtList: Stmt StmtList
   33         | %empty

   34 Stmt: Exp SEMI
   35     | error SEMI
   36     | CompSt
   37     | RETURN Exp SEMI
   38     | RETURN Exp error
   39     | IF LP Exp RP Stmt
   40     | IF LP Exp RP Stmt ELSE Stmt
   41     | IF LP error RP Stmt
   42     | IF LP error RP Stmt ELSE Stmt
   43     | WHILE LP Exp RP Stmt

   44 $@1: %empty

   45 Stmt: WHILE LP error RP $@1 Stmt

   46 DefList: Def DefList
   47        | %empty

   48 Def: Specifier DecList SEMI
   49    | Specifier error SEMI
   50    | Specifier DecList error

   51 DecList: Dec
   52        | Dec COMMA DecList

   53 Dec: VarDec
   54    | VarDec ASSIGNOP Exp

   55 Exp: Exp ASSIGNOP Exp
   56    | Exp AND Exp
   57    | Exp OR Exp
   58    | Exp RELOP Exp
   59    | Exp PLUS Exp
   60    | Exp MINUS Exp
   61    | Exp STAR Exp
   62    | Exp DIV Exp
   63    | LP Exp RP
   64    | LP Exp error
   65    | MINUS Exp
   66    | NOT Exp
   67    | ID LP Args RP
   68    | ID LP RP
   69    | ID LP Args error
   70    | ID LP error RP
   71    | Exp LB Exp RB
   72    | Exp LB error RB
   73    | Exp LB Exp error
   74    | Exp DOT ID
   75    | Exp DOT error
   76    | ID
   77    | INT
   78    | FLOAT

   79 Args: Exp COMMA Args
   80     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 8 9 10 22 23 26 27 35 38 41 42 45 49 50 64 69 70 72 73
    75
INT (258) 21 22 77
FLOAT (259) 78
STRUCT (260) 15 16
ID (261) 17 19 20 24 25 26 27 67 68 69 70 74 76
SEMI (262) 4 5 7 10 34 35 37 48 49
COMMA (263) 12 28 52 79
ASSIGNOP (264) 54 55
RELOP (265) 58
PLUS (266) 59
MINUS (267) 60 65
STAR (268) 61
DIV (269) 62
AND (270) 56
OR (271) 57
NOT (272) 66
DOT (273) 74 75
TYPE (274) 13
LP (275) 24 25 26 27 39 40 41 42 43 45 63 64 67 68 69 70
RP (276) 24 25 27 39 40 41 42 43 45 63 67 68 70
LB (277) 21 22 23 71 72 73
RB (278) 21 23 71 72
LC (279) 15 31
RC (280) 15 31
RETURN (281) 37 38
IF (282) 39 40 41 42
ELSE (283) 40 42
WHILE (284) 43 45
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    左： 0
Program (32)
    左： 1, 右： 0
ExtDefList (33)
    左： 2 3, 右： 1 2
ExtDef (34)
    左： 4 5 6 7 8 9 10, 右： 2
ExtDecList (35)
    左： 11 12, 右： 4 8 12
Specifier (36)
    左： 13 14, 右： 4 5 6 7 8 9 10 30 48 49 50
StructSpecifier (37)
    左： 15 16, 右： 14
OptTag (38)
    左： 17 18, 右： 15
Tag (39)
    左： 19, 右： 16
VarDec (40)
    左： 20 21 22 23, 右： 11 12 21 22 23 30 53 54
FunDec (41)
    左： 24 25 26 27, 右： 6 7
VarList (42)
    左： 28 29, 右： 24 26 28
ParamDec (43)
    左： 30, 右： 28 29
CompSt (44)
    左： 31, 右： 6 36
StmtList (45)
    左： 32 33, 右： 31 32
Stmt (46)
    左： 34 35 36 37 38 39 40 41 42 43 45, 右： 32 39 40 41 42
    43 45
$@1 (47)
    左： 44, 右： 45
DefList (48)
    左： 46 47, 右： 15 31 46
Def (49)
    左： 48 49 50, 右： 46
DecList (50)
    左： 51 52, 右： 48 50 52
Dec (51)
    左： 53 54, 右： 51 52
Exp (52)
    左： 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73
    74 75 76 77 78, 右： 34 37 38 39 40 43 54 55 56 57 58 59 60 61
    62 63 64 65 66 71 72 73 74 75 79 80
Args (53)
    左： 79 80, 右： 67 69 79


State 0

    0 $accept: . Program $end

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          转到状态 3
    ExtDefList       转到状态 4
    ExtDef           转到状态 5
    Specifier        转到状态 6
    StructSpecifier  转到状态 7


State 1

   15 StructSpecifier: STRUCT . OptTag LC DefList RC
   16                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 18 (OptTag)

    OptTag  转到状态 9
    Tag     转到状态 10


State 2

   13 Specifier: TYPE .

    $default  reduce using rule 13 (Specifier)


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       转到状态 12
    ExtDef           转到状态 5
    Specifier        转到状态 6
    StructSpecifier  转到状态 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . FunDec SEMI
    8       | Specifier . ExtDecList error
    9       | Specifier . error
   10       | Specifier . error SEMI

    error  shift, and go to state 13
    ID     shift, and go to state 14
    SEMI   shift, and go to state 15

    ExtDecList  转到状态 16
    VarDec      转到状态 17
    FunDec      转到状态 18


State 7

   14 Specifier: StructSpecifier .

    $default  reduce using rule 14 (Specifier)


State 8

   17 OptTag: ID .
   19 Tag: ID .

    LC        reduce using rule 17 (OptTag)
    $default  reduce using rule 19 (Tag)


State 9

   15 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 19


State 10

   16 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 16 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  接受


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

    9 ExtDef: Specifier error .
   10       | Specifier error . SEMI

    SEMI  shift, and go to state 20

    $default  reduce using rule 9 (ExtDef)


State 14

   20 VarDec: ID .
   24 FunDec: ID . LP VarList RP
   25       | ID . LP RP
   26       | ID . LP VarList error
   27       | ID . LP error RP

    LP  shift, and go to state 21

    $default  reduce using rule 20 (VarDec)


State 15

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 16

    4 ExtDef: Specifier ExtDecList . SEMI
    8       | Specifier ExtDecList . error

    error  shift, and go to state 22
    SEMI   shift, and go to state 23


State 17

   11 ExtDecList: VarDec .
   12           | VarDec . COMMA ExtDecList
   21 VarDec: VarDec . LB INT RB
   22       | VarDec . LB INT error
   23       | VarDec . LB error RB

    COMMA  shift, and go to state 24
    LB     shift, and go to state 25

    $default  reduce using rule 11 (ExtDecList)


State 18

    6 ExtDef: Specifier FunDec . CompSt
    7       | Specifier FunDec . SEMI

    SEMI  shift, and go to state 26
    LC    shift, and go to state 27

    CompSt  转到状态 28


State 19

   15 StructSpecifier: STRUCT OptTag LC . DefList RC

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 47 (DefList)

    Specifier        转到状态 29
    StructSpecifier  转到状态 7
    DefList          转到状态 30
    Def              转到状态 31


State 20

   10 ExtDef: Specifier error SEMI .

    $default  reduce using rule 10 (ExtDef)


State 21

   24 FunDec: ID LP . VarList RP
   25       | ID LP . RP
   26       | ID LP . VarList error
   27       | ID LP . error RP

    error   shift, and go to state 32
    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2
    RP      shift, and go to state 33

    Specifier        转到状态 34
    StructSpecifier  转到状态 7
    VarList          转到状态 35
    ParamDec         转到状态 36


State 22

    8 ExtDef: Specifier ExtDecList error .

    $default  reduce using rule 8 (ExtDef)


State 23

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 24

   12 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 37

    ExtDecList  转到状态 38
    VarDec      转到状态 17


State 25

   21 VarDec: VarDec LB . INT RB
   22       | VarDec LB . INT error
   23       | VarDec LB . error RB

    error  shift, and go to state 39
    INT    shift, and go to state 40


State 26

    7 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 7 (ExtDef)


State 27

   31 CompSt: LC . DefList StmtList RC

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 47 (DefList)

    Specifier        转到状态 29
    StructSpecifier  转到状态 7
    DefList          转到状态 41
    Def              转到状态 31


State 28

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 29

   48 Def: Specifier . DecList SEMI
   49    | Specifier . error SEMI
   50    | Specifier . DecList error

    error  shift, and go to state 42
    ID     shift, and go to state 37

    VarDec   转到状态 43
    DecList  转到状态 44
    Dec      转到状态 45


State 30

   15 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 46


State 31

   46 DefList: Def . DefList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 47 (DefList)

    Specifier        转到状态 29
    StructSpecifier  转到状态 7
    DefList          转到状态 47
    Def              转到状态 31


State 32

   27 FunDec: ID LP error . RP

    RP  shift, and go to state 48


State 33

   25 FunDec: ID LP RP .

    $default  reduce using rule 25 (FunDec)


State 34

   30 ParamDec: Specifier . VarDec

    ID  shift, and go to state 37

    VarDec  转到状态 49


State 35

   24 FunDec: ID LP VarList . RP
   26       | ID LP VarList . error

    error  shift, and go to state 50
    RP     shift, and go to state 51


State 36

   28 VarList: ParamDec . COMMA VarList
   29        | ParamDec .

    COMMA  shift, and go to state 52

    $default  reduce using rule 29 (VarList)


State 37

   20 VarDec: ID .

    $default  reduce using rule 20 (VarDec)


State 38

   12 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 12 (ExtDecList)


State 39

   23 VarDec: VarDec LB error . RB

    RB  shift, and go to state 53


State 40

   21 VarDec: VarDec LB INT . RB
   22       | VarDec LB INT . error

    error  shift, and go to state 54
    RB     shift, and go to state 55


State 41

   31 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 56
    INT     shift, and go to state 57
    FLOAT   shift, and go to state 58
    ID      shift, and go to state 59
    MINUS   shift, and go to state 60
    NOT     shift, and go to state 61
    LP      shift, and go to state 62
    LC      shift, and go to state 27
    RETURN  shift, and go to state 63
    IF      shift, and go to state 64
    WHILE   shift, and go to state 65

    RC  reduce using rule 33 (StmtList)

    CompSt    转到状态 66
    StmtList  转到状态 67
    Stmt      转到状态 68
    Exp       转到状态 69


State 42

   49 Def: Specifier error . SEMI

    SEMI  shift, and go to state 70


State 43

   21 VarDec: VarDec . LB INT RB
   22       | VarDec . LB INT error
   23       | VarDec . LB error RB
   53 Dec: VarDec .
   54    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 71
    LB        shift, and go to state 25

    $default  reduce using rule 53 (Dec)


State 44

   48 Def: Specifier DecList . SEMI
   50    | Specifier DecList . error

    error  shift, and go to state 72
    SEMI   shift, and go to state 73


State 45

   51 DecList: Dec .
   52        | Dec . COMMA DecList

    COMMA  shift, and go to state 74

    $default  reduce using rule 51 (DecList)


State 46

   15 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 15 (StructSpecifier)


State 47

   46 DefList: Def DefList .

    $default  reduce using rule 46 (DefList)


State 48

   27 FunDec: ID LP error RP .

    $default  reduce using rule 27 (FunDec)


State 49

   21 VarDec: VarDec . LB INT RB
   22       | VarDec . LB INT error
   23       | VarDec . LB error RB
   30 ParamDec: Specifier VarDec .

    LB  shift, and go to state 25

    $default  reduce using rule 30 (ParamDec)


State 50

   26 FunDec: ID LP VarList error .

    $default  reduce using rule 26 (FunDec)


State 51

   24 FunDec: ID LP VarList RP .

    $default  reduce using rule 24 (FunDec)


State 52

   28 VarList: ParamDec COMMA . VarList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    Specifier        转到状态 34
    StructSpecifier  转到状态 7
    VarList          转到状态 75
    ParamDec         转到状态 36


State 53

   23 VarDec: VarDec LB error RB .

    $default  reduce using rule 23 (VarDec)


State 54

   22 VarDec: VarDec LB INT error .

    $default  reduce using rule 22 (VarDec)


State 55

   21 VarDec: VarDec LB INT RB .

    $default  reduce using rule 21 (VarDec)


State 56

   35 Stmt: error . SEMI

    SEMI  shift, and go to state 76


State 57

   77 Exp: INT .

    $default  reduce using rule 77 (Exp)


State 58

   78 Exp: FLOAT .

    $default  reduce using rule 78 (Exp)


State 59

   67 Exp: ID . LP Args RP
   68    | ID . LP RP
   69    | ID . LP Args error
   70    | ID . LP error RP
   76    | ID .

    LP  shift, and go to state 77

    $default  reduce using rule 76 (Exp)


State 60

   65 Exp: MINUS . Exp

    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  转到状态 78


State 61

   66 Exp: NOT . Exp

    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  转到状态 79


State 62

   63 Exp: LP . Exp RP
   64    | LP . Exp error

    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  转到状态 80


State 63

   37 Stmt: RETURN . Exp SEMI
   38     | RETURN . Exp error

    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  转到状态 81


State 64

   39 Stmt: IF . LP Exp RP Stmt
   40     | IF . LP Exp RP Stmt ELSE Stmt
   41     | IF . LP error RP Stmt
   42     | IF . LP error RP Stmt ELSE Stmt

    LP  shift, and go to state 82


State 65

   43 Stmt: WHILE . LP Exp RP Stmt
   45     | WHILE . LP error RP $@1 Stmt

    LP  shift, and go to state 83


State 66

   36 Stmt: CompSt .

    $default  reduce using rule 36 (Stmt)


State 67

   31 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 84


State 68

   32 StmtList: Stmt . StmtList

    error   shift, and go to state 56
    INT     shift, and go to state 57
    FLOAT   shift, and go to state 58
    ID      shift, and go to state 59
    MINUS   shift, and go to state 60
    NOT     shift, and go to state 61
    LP      shift, and go to state 62
    LC      shift, and go to state 27
    RETURN  shift, and go to state 63
    IF      shift, and go to state 64
    WHILE   shift, and go to state 65

    RC  reduce using rule 33 (StmtList)

    CompSt    转到状态 66
    StmtList  转到状态 85
    Stmt      转到状态 68
    Exp       转到状态 69


State 69

   34 Stmt: Exp . SEMI
   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . AND Exp
   57    | Exp . OR Exp
   58    | Exp . RELOP Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . STAR Exp
   62    | Exp . DIV Exp
   71    | Exp . LB Exp RB
   72    | Exp . LB error RB
   73    | Exp . LB Exp error
   74    | Exp . DOT ID
   75    | Exp . DOT error

    SEMI      shift, and go to state 86
    ASSIGNOP  shift, and go to state 87
    RELOP     shift, and go to state 88
    PLUS      shift, and go to state 89
    MINUS     shift, and go to state 90
    STAR      shift, and go to state 91
    DIV       shift, and go to state 92
    AND       shift, and go to state 93
    OR        shift, and go to state 94
    DOT       shift, and go to state 95
    LB        shift, and go to state 96


State 70

   49 Def: Specifier error SEMI .

    $default  reduce using rule 49 (Def)


State 71

   54 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  转到状态 97


State 72

   50 Def: Specifier DecList error .

    $default  reduce using rule 50 (Def)


State 73

   48 Def: Specifier DecList SEMI .

    $default  reduce using rule 48 (Def)


State 74

   52 DecList: Dec COMMA . DecList

    ID  shift, and go to state 37

    VarDec   转到状态 43
    DecList  转到状态 98
    Dec      转到状态 45


State 75

   28 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 28 (VarList)


State 76

   35 Stmt: error SEMI .

    $default  reduce using rule 35 (Stmt)


State 77

   67 Exp: ID LP . Args RP
   68    | ID LP . RP
   69    | ID LP . Args error
   70    | ID LP . error RP

    error  shift, and go to state 99
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62
    RP     shift, and go to state 100

    Exp   转到状态 101
    Args  转到状态 102


State 78

   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . AND Exp
   57    | Exp . OR Exp
   58    | Exp . RELOP Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . STAR Exp
   62    | Exp . DIV Exp
   65    | MINUS Exp .
   71    | Exp . LB Exp RB
   72    | Exp . LB error RB
   73    | Exp . LB Exp error
   74    | Exp . DOT ID
   75    | Exp . DOT error

    STAR  shift, and go to state 91
    DIV   shift, and go to state 92
    DOT   shift, and go to state 95
    LB    shift, and go to state 96

    $default  reduce using rule 65 (Exp)


State 79

   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . AND Exp
   57    | Exp . OR Exp
   58    | Exp . RELOP Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . STAR Exp
   62    | Exp . DIV Exp
   66    | NOT Exp .
   71    | Exp . LB Exp RB
   72    | Exp . LB error RB
   73    | Exp . LB Exp error
   74    | Exp . DOT ID
   75    | Exp . DOT error

    DOT  shift, and go to state 95
    LB   shift, and go to state 96

    $default  reduce using rule 66 (Exp)


State 80

   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . AND Exp
   57    | Exp . OR Exp
   58    | Exp . RELOP Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . STAR Exp
   62    | Exp . DIV Exp
   63    | LP Exp . RP
   64    | LP Exp . error
   71    | Exp . LB Exp RB
   72    | Exp . LB error RB
   73    | Exp . LB Exp error
   74    | Exp . DOT ID
   75    | Exp . DOT error

    error     shift, and go to state 103
    ASSIGNOP  shift, and go to state 87
    RELOP     shift, and go to state 88
    PLUS      shift, and go to state 89
    MINUS     shift, and go to state 90
    STAR      shift, and go to state 91
    DIV       shift, and go to state 92
    AND       shift, and go to state 93
    OR        shift, and go to state 94
    DOT       shift, and go to state 95
    RP        shift, and go to state 104
    LB        shift, and go to state 96


State 81

   37 Stmt: RETURN Exp . SEMI
   38     | RETURN Exp . error
   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . AND Exp
   57    | Exp . OR Exp
   58    | Exp . RELOP Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . STAR Exp
   62    | Exp . DIV Exp
   71    | Exp . LB Exp RB
   72    | Exp . LB error RB
   73    | Exp . LB Exp error
   74    | Exp . DOT ID
   75    | Exp . DOT error

    error     shift, and go to state 105
    SEMI      shift, and go to state 106
    ASSIGNOP  shift, and go to state 87
    RELOP     shift, and go to state 88
    PLUS      shift, and go to state 89
    MINUS     shift, and go to state 90
    STAR      shift, and go to state 91
    DIV       shift, and go to state 92
    AND       shift, and go to state 93
    OR        shift, and go to state 94
    DOT       shift, and go to state 95
    LB        shift, and go to state 96


State 82

   39 Stmt: IF LP . Exp RP Stmt
   40     | IF LP . Exp RP Stmt ELSE Stmt
   41     | IF LP . error RP Stmt
   42     | IF LP . error RP Stmt ELSE Stmt

    error  shift, and go to state 107
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  转到状态 108


State 83

   43 Stmt: WHILE LP . Exp RP Stmt
   45     | WHILE LP . error RP $@1 Stmt

    error  shift, and go to state 109
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  转到状态 110


State 84

   31 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 31 (CompSt)


State 85

   32 StmtList: Stmt StmtList .

    $default  reduce using rule 32 (StmtList)


State 86

   34 Stmt: Exp SEMI .

    $default  reduce using rule 34 (Stmt)


State 87

   55 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  转到状态 111


State 88

   58 Exp: Exp RELOP . Exp

    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  转到状态 112


State 89

   59 Exp: Exp PLUS . Exp

    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  转到状态 113


State 90

   60 Exp: Exp MINUS . Exp

    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  转到状态 114


State 91

   61 Exp: Exp STAR . Exp

    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  转到状态 115


State 92

   62 Exp: Exp DIV . Exp

    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  转到状态 116


State 93

   56 Exp: Exp AND . Exp

    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  转到状态 117


State 94

   57 Exp: Exp OR . Exp

    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  转到状态 118


State 95

   74 Exp: Exp DOT . ID
   75    | Exp DOT . error

    error  shift, and go to state 119
    ID     shift, and go to state 120


State 96

   71 Exp: Exp LB . Exp RB
   72    | Exp LB . error RB
   73    | Exp LB . Exp error

    error  shift, and go to state 121
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  转到状态 122


State 97

   54 Dec: VarDec ASSIGNOP Exp .
   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . AND Exp
   57    | Exp . OR Exp
   58    | Exp . RELOP Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . STAR Exp
   62    | Exp . DIV Exp
   71    | Exp . LB Exp RB
   72    | Exp . LB error RB
   73    | Exp . LB Exp error
   74    | Exp . DOT ID
   75    | Exp . DOT error

    ASSIGNOP  shift, and go to state 87
    RELOP     shift, and go to state 88
    PLUS      shift, and go to state 89
    MINUS     shift, and go to state 90
    STAR      shift, and go to state 91
    DIV       shift, and go to state 92
    AND       shift, and go to state 93
    OR        shift, and go to state 94
    DOT       shift, and go to state 95
    LB        shift, and go to state 96

    $default  reduce using rule 54 (Dec)


State 98

   52 DecList: Dec COMMA DecList .

    $default  reduce using rule 52 (DecList)


State 99

   70 Exp: ID LP error . RP

    RP  shift, and go to state 123


State 100

   68 Exp: ID LP RP .

    $default  reduce using rule 68 (Exp)


State 101

   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . AND Exp
   57    | Exp . OR Exp
   58    | Exp . RELOP Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . STAR Exp
   62    | Exp . DIV Exp
   71    | Exp . LB Exp RB
   72    | Exp . LB error RB
   73    | Exp . LB Exp error
   74    | Exp . DOT ID
   75    | Exp . DOT error
   79 Args: Exp . COMMA Args
   80     | Exp .

    COMMA     shift, and go to state 124
    ASSIGNOP  shift, and go to state 87
    RELOP     shift, and go to state 88
    PLUS      shift, and go to state 89
    MINUS     shift, and go to state 90
    STAR      shift, and go to state 91
    DIV       shift, and go to state 92
    AND       shift, and go to state 93
    OR        shift, and go to state 94
    DOT       shift, and go to state 95
    LB        shift, and go to state 96

    $default  reduce using rule 80 (Args)


State 102

   67 Exp: ID LP Args . RP
   69    | ID LP Args . error

    error  shift, and go to state 125
    RP     shift, and go to state 126


State 103

   64 Exp: LP Exp error .

    $default  reduce using rule 64 (Exp)


State 104

   63 Exp: LP Exp RP .

    $default  reduce using rule 63 (Exp)


State 105

   38 Stmt: RETURN Exp error .

    $default  reduce using rule 38 (Stmt)


State 106

   37 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 37 (Stmt)


State 107

   41 Stmt: IF LP error . RP Stmt
   42     | IF LP error . RP Stmt ELSE Stmt

    RP  shift, and go to state 127


State 108

   39 Stmt: IF LP Exp . RP Stmt
   40     | IF LP Exp . RP Stmt ELSE Stmt
   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . AND Exp
   57    | Exp . OR Exp
   58    | Exp . RELOP Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . STAR Exp
   62    | Exp . DIV Exp
   71    | Exp . LB Exp RB
   72    | Exp . LB error RB
   73    | Exp . LB Exp error
   74    | Exp . DOT ID
   75    | Exp . DOT error

    ASSIGNOP  shift, and go to state 87
    RELOP     shift, and go to state 88
    PLUS      shift, and go to state 89
    MINUS     shift, and go to state 90
    STAR      shift, and go to state 91
    DIV       shift, and go to state 92
    AND       shift, and go to state 93
    OR        shift, and go to state 94
    DOT       shift, and go to state 95
    RP        shift, and go to state 128
    LB        shift, and go to state 96


State 109

   45 Stmt: WHILE LP error . RP $@1 Stmt

    RP  shift, and go to state 129


State 110

   43 Stmt: WHILE LP Exp . RP Stmt
   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . AND Exp
   57    | Exp . OR Exp
   58    | Exp . RELOP Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . STAR Exp
   62    | Exp . DIV Exp
   71    | Exp . LB Exp RB
   72    | Exp . LB error RB
   73    | Exp . LB Exp error
   74    | Exp . DOT ID
   75    | Exp . DOT error

    ASSIGNOP  shift, and go to state 87
    RELOP     shift, and go to state 88
    PLUS      shift, and go to state 89
    MINUS     shift, and go to state 90
    STAR      shift, and go to state 91
    DIV       shift, and go to state 92
    AND       shift, and go to state 93
    OR        shift, and go to state 94
    DOT       shift, and go to state 95
    RP        shift, and go to state 130
    LB        shift, and go to state 96


State 111

   55 Exp: Exp . ASSIGNOP Exp
   55    | Exp ASSIGNOP Exp .
   56    | Exp . AND Exp
   57    | Exp . OR Exp
   58    | Exp . RELOP Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . STAR Exp
   62    | Exp . DIV Exp
   71    | Exp . LB Exp RB
   72    | Exp . LB error RB
   73    | Exp . LB Exp error
   74    | Exp . DOT ID
   75    | Exp . DOT error

    ASSIGNOP  shift, and go to state 87
    RELOP     shift, and go to state 88
    PLUS      shift, and go to state 89
    MINUS     shift, and go to state 90
    STAR      shift, and go to state 91
    DIV       shift, and go to state 92
    AND       shift, and go to state 93
    OR        shift, and go to state 94
    DOT       shift, and go to state 95
    LB        shift, and go to state 96

    $default  reduce using rule 55 (Exp)


State 112

   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . AND Exp
   57    | Exp . OR Exp
   58    | Exp . RELOP Exp
   58    | Exp RELOP Exp .
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . STAR Exp
   62    | Exp . DIV Exp
   71    | Exp . LB Exp RB
   72    | Exp . LB error RB
   73    | Exp . LB Exp error
   74    | Exp . DOT ID
   75    | Exp . DOT error
